# LuxS2

./: .gitignore  _linear_programming_test.py  action_handling.py  action_selection.py  agent.py  collect_submission.sh  dynamics.py  environment.yml  eval_replay.json  evaluate.py  evaluation.py  loader.py  main.py  model.py  models_old.py  observation.py  preprocessing.py  pyproject.toml  run_bandits.py  sweep_hyperparams.py  train.py  tuning.py  utils.py
bandit/: algorithms.py  utils.py
bandit/problems/: copeland.py  random.py
bandits/: main.py  pyproject.toml
bandits/bandit/: algorithms.py  utils.py
bandits/bandit/problems/: __init__.py  common.py  condorcet.py  copeland.py  random.py  rankings.py
early_game/: placement.py
env/: action_handling.py  action_masking.py  test_env.py
initial_prediction/: loader.py  model.py  train.py
lux/: config.py  factory.py  forward_sim.py  kit.py  team.py  unit.py
models/: __init__.py  linear.py  unet.py
replays/: convert.py  download_replays.py  model.py  train.py
submission/: agent.py  early_game  lux-ai-challenge-season-2-tutorial-python.ipynb  main.py
submission/lux/: factory.py  unit.py
tests/: test_action_handling.py  test_action_selection.py  test_dynamics.py  test_observation.py  test_observations.py  test_preprocessing.py  test_trainer.py
tuning/: logger.py  runner.py  tuning.py
