[tool.poetry]
name = "dueling bandits"
version = "0.1.0"
description = ""
authors = ["Stephen Huan <shuan@gatech.edu>"]
readme = "README.md"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 79

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
